openshift/applications/routes/efiling-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fla-springboot-backend
    template: meta-service
  name: api
  namespace: qzaydf-dev
  resourceVersion: "1949054177"
  selfLink: /apis/route.openshift.io/v1/namespaces/qzaydf-dev/routes/api
  uid: 773035f1-cba5-11ea-97c7-005056832285
spec:
  host: fla-api.pathfinder.gov.bc.ca
  port:
    targetPort: web
  tls:
    termination: edge
  to:
    kind: Service
    name: fla-springboot-backend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: "2020-07-21T22:56:51Z"
          status: "True"
          type: Admitted
      host: fla-api.pathfinder.gov.bc.ca
      routerName: router
      wildcardPolicy: None
