openshift/applications/routes/fla-nginx-proxy-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  labels:
    app: fla-nginx-proxy
  name: fla-nginx-proxy
  namespace: qzaydf-dev
  resourceVersion: "1915319277"
  selfLink: /apis/route.openshift.io/v1/namespaces/qzaydf-dev/routes/fla-nginx-proxy
  uid: fb8b9710-c14d-11ea-8a31-0050568348cc
spec:
  host: fla-nginx-proxy-qzaydf-dev.pathfinder.gov.bc.ca
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: fla-nginx-proxy
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: "2020-07-08T19:05:26Z"
          status: "True"
          type: Admitted
      host: fla-nginx-proxy-qzaydf-dev.pathfinder.gov.bc.ca
      routerName: router
      wildcardPolicy: None
