openshift/applications/routes/react-web-app-demo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: react-web-app-demo
    application: modern-web-app
  name: efiling-demo
  namespace: qzaydf-dev
  resourceVersion: "1936688110"
  selfLink: /apis/route.openshift.io/v1/namespaces/qzaydf-dev/routes/efiling-demo
  uid: fcb96d41-c7b6-11ea-97c7-005056832285
spec:
  host: react-web-app-demo-qzaydf-dev.pathfinder.gov.bc.ca
  path: /efiling-demo
  port:
    targetPort: http
  to:
    kind: Service
    name: react-web-app-demo
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: "2020-07-16T22:52:12Z"
          status: "True"
          type: Admitted
      host: react-web-app-demo-qzaydf-dev.pathfinder.gov.bc.ca
      routerName: router
      wildcardPolicy: None
