openshift/applications/routes/react-web-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: react-web-app
    application: modern-web-app
  name: react-web-app
  namespace: qzaydf-dev
  resourceVersion: "1936688740"
  selfLink: /apis/route.openshift.io/v1/namespaces/qzaydf-dev/routes/react-web-app
  uid: a934e005-c7a6-11ea-97c7-005056832285
spec:
  host: react-web-app-qzaydf-dev.pathfinder.gov.bc.ca
  path: /efiling
  port:
    targetPort: 8080
  to:
    kind: Service
    name: react-web-app
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: "2020-07-16T20:55:20Z"
          status: "True"
          type: Admitted
      host: react-web-app-qzaydf-dev.pathfinder.gov.bc.ca
      routerName: router
      wildcardPolicy: None
